[package]
name = "lesspass-otp"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
description = "Generate password for any site, with only a master password, a site name, a login and a counter using Lesspass algorithm. Generate TOTP or HOTP too."
keywords = ["lesspass", "totp", "hotp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "lolo32/lesspass-otp", branch = "master", service = "github" }

[features]
default = ["std_time"]
std_time = []

[dependencies]
base32 = "0.4.0"
hmac = "0.8.1"
lazy_static = "1.4.0"
num-bigint = "0.3.0"
num-integer = "0.1.43"
num-traits = "0.2.12"
pbkdf2 = { version = "0.4.0", default-features = false }
sha-1 = "0.9.1"
sha2 = { version = "0.9.1", default-features = false }
sha3 = "0.9.1"
