[package]
name = "wasm"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.base64]
version = "0.13.0"

[dependencies.enclose]
version = "1.1.8"

[dependencies.lesspass-otp]
path = "../lesspass-otp"
features = ["serde"]

[dependencies.seed]
version = "0.8.0"

[dependencies.serde]
version = "^1.0"

[dependencies.ulid]
version = "0.4.1"
features = [
    "serde"
]

[dependencies.wasm-bindgen]
version = "^0.2"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "Clipboard",
    "CssStyleDeclaration",
    "DomTokenList",
    "Element",
    "Event",
    "EventTarget",
    "HtmlDivElement",
    "HtmlInputElement",
    "MouseEvent",
    "Navigator",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"